[radian] adding animation, fixing responsive on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -471,6 +471,11 @@ body{
         opacity: 0.7;
     }
 
+    .container.container-mulai-sewa{
+        padding: 35px 0px;
+        width: 93%;
+    }
+
     .btn-close{
         position: relative;
         top: 5%;
